--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -1566,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ae581302",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1574,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "5\n",
+      "3\n"
      ]
     }
    ],
@@ -1587,7 +1588,154 @@
     "        print(x)\n",
     "\n",
     "prueba= Prueba\n",
-    "prueba().fun()"
+    "prueba().fun()\n",
+    "\n",
+    "def a():\n",
+    "    return 3\n",
+    "\n",
+    "def b():\n",
+    "    return a()\n",
+    "\n",
+    "\n",
+    "print(b())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a819475",
+   "metadata": {},
+   "source": [
+    "### Calcular el WER usando `jiwer`\n",
+    "Según Gemini es el mejor método usado en speech processing para calcular el WER. Acá se calcula en forma manual usando `torchaudio.functional.edit_distance` y usando jiwer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4ed27752",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WER for perfect match: 0.0000\n",
+      "WER for some errors (manual): 0.2500\n",
+      "WER for mixed errors (manual): 0.2857\n",
+      "WER for mixed errors (jiwer): 0.2857\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torchaudio.functional as F\n",
+    "import jiwer\n",
+    "\n",
+    "def calculate_wer_manual(references: list[str], hypotheses: list[str]) -> float:\n",
+    "    \"\"\"\n",
+    "    Calculates the Word Error Rate (WER) by manually summing edit distances\n",
+    "    and normalizing by reference lengths using torchaudio.functional.edit_distance.\n",
+    "\n",
+    "    Args:\n",
+    "        references (list[str]): A list of ground truth transcripts.\n",
+    "                                Each string is a sentence/utterance.\n",
+    "        hypotheses (list[str]): A list of ASR output transcripts.\n",
+    "                                Each string is a sentence/utterance.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The calculated Word Error Rate (WER).\n",
+    "    \"\"\"\n",
+    "    if len(references) != len(hypotheses):\n",
+    "        raise ValueError(\"The number of references and hypotheses must be the same.\")\n",
+    "\n",
+    "    total_errors = 0\n",
+    "    total_reference_words = 0\n",
+    "\n",
+    "    for ref_utt, hyp_utt in zip(references, hypotheses):\n",
+    "        # Split utterances into words (tokenize)\n",
+    "        ref_words = ref_utt.split()\n",
+    "        hyp_words = hyp_utt.split()\n",
+    "\n",
+    "        # Calculate the word-level edit distance for this utterance pair\n",
+    "        # F.edit_distance expects sequences (lists of tokens/words)\n",
+    "        errors_for_utt = F.edit_distance(ref_words, hyp_words)\n",
+    "\n",
+    "        # Add to total errors\n",
+    "        total_errors += errors_for_utt\n",
+    "\n",
+    "        # Add to total reference words\n",
+    "        total_reference_words += len(ref_words)\n",
+    "\n",
+    "    # Calculate WER: (Substitutions + Deletions + Insertions) / Total Reference Words\n",
+    "    if total_reference_words == 0:\n",
+    "        # Handle case where all references are empty (e.g., silence)\n",
+    "        # If there are also no errors, WER is 0. Otherwise, it might be undefined or 1.\n",
+    "        # For practical ASR, this usually means an issue with the dataset or evaluation setup.\n",
+    "        return 0.0 if total_errors == 0 else float('inf') # Or handle as per specific requirements\n",
+    "    else:\n",
+    "        wer = total_errors / total_reference_words\n",
+    "        return wer\n",
+    "\n",
+    "# --- Example Usage ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Example 1: Perfect match\n",
+    "    references1 = [\"hello world\", \"how are you\"]\n",
+    "    hypotheses1 = [\"hello world\", \"how are you\"]\n",
+    "    wer1 = calculate_wer_manual(references1, hypotheses1)\n",
+    "    print(f\"WER for perfect match: {wer1:.4f}\")\n",
+    "\n",
+    "    # Example 2: Some errors\n",
+    "    references2 = [\n",
+    "        \"the quick brown fox jumps over the lazy dog\",\n",
+    "        \"i am learning speech processing with pytorch\"\n",
+    "    ]\n",
+    "    hypotheses2 = [\n",
+    "        \"a quick brown fox jump over the dog\",\n",
+    "        \"i am learning speech processing in pytorch\"\n",
+    "    ]\n",
+    "    wer2 = calculate_wer_manual(references2, hypotheses2)\n",
+    "    print(f\"WER for some errors (manual): {wer2:.4f}\")\n",
+    "\n",
+    "    # Example 3: Empty strings (careful handling needed for N=0)\n",
+    "    references3 = [\"\", \"this is a test\"] # Reference 0 is empty\n",
+    "    hypotheses3 = [\"hello\", \"this is a test\"]\n",
+    "    # For ref=\"\", hyp=\"hello\": edit_distance(\"\", [\"hello\"]) = 1 (insertion of \"hello\")\n",
+    "    # len(\"\") = 0. This part of the WER calculation would be 1/0, which is problematic.\n",
+    "    # Our manual function handles total_reference_words = 0, but if only *some* references are empty,\n",
+    "    # it's usually better to filter them out or use a library that handles this robustly.\n",
+    "    # For this specific case, the `jiwer` library is more robust.\n",
+    "    # Let's use a more typical case where references are not empty.\n",
+    "    references4 = [\"the cat sat\", \"a dog barked loudly\"]\n",
+    "    hypotheses4 = [\"the car sat\", \"a dog barked\"] # Substitution, deletion\n",
+    "    wer4 = calculate_wer_manual(references4, hypotheses4)\n",
+    "    print(f\"WER for mixed errors (manual): {wer4:.4f}\")\n",
+    "\n",
+    "    # Compare with jiwer (for verification)\n",
+    "    import jiwer\n",
+    "    wer_jiwer = jiwer.wer(references4, hypotheses4)\n",
+    "    print(f\"WER for mixed errors (jiwer): {wer_jiwer:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6ff145fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.26666666666666666"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "jiwer.cer(references4, hypotheses4)"
    ]
   }
  ],
