--- a/timit/ctc.ipynb
+++ b/timit/ctc.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda\n"
+      "cpu\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ccc0ee22",
    "metadata": {},
    "outputs": [],
@@ -367,13 +367,15 @@
     "        step = 0\n",
     "        with torch.no_grad():\n",
     "            for batch in tqdm(self.valid_dl, colour=\"green\", initial=step, desc='validando'):\n",
-    "                self.step += 1\n",
-    "                loss = self.evaluate_batch(batch, stage=Stage.VALID)\n",
+    "                step += 1\n",
+    "                feats = F.MelSpectrogram(wavs)\n",
+    "                feats = self._normalize(feats, wavs_l)\n",
+    "                pout, pout_l = self.modelo(feats) # Paso el batch por el modelo\n",
+    "                loss = self.loss_fn(pout, phns, wavs_l, phns_l) # Calculo la loss del batch\n",
     "                avg_valid_loss = self._update_average(loss, avg_valid_loss)\n",
     "\n",
-    "\n",
-    "            self.step = 0\n",
-    "            self.on_stage_end(Stage.VALID, avg_valid_loss, epoch)\n",
+    "        self.valid_loss.append((i,avg_valid_loss))\n",
+    "        sequence = _ctc_gready_decode(pout,pout_l,)\n",
     "    \n",
     "    def fit(): # Entrenamiento y validación\n",
     "        train()\n",
@@ -383,7 +385,8 @@
     "    def evaluación():\n",
     "        pass\n",
     "    \n",
-    "    # Métodos auxiliares\n",
+    "    # ----------------------------Métodos auxiliares------------------------------------------------\n",
+    "\n",
     "    def _update_average(loss, avg_loss,step):\n",
     "    \"\"\"Update running average of the loss.\n",
     "    Lo que hace es: \n",
@@ -395,6 +398,41 @@
     "        avg_loss -= avg_loss / step\n",
     "        avg_loss += float(loss) / step\n",
     "    return avg_loss\n",
+    "\n",
+    "    def _ctc_gready_decode(self, log_probs: torch.Tensor, lengths: torch.Tensor = None, blank_id=0):\n",
+    "    \"\"\"\n",
+    "    Performs greedy CTC decoding on the input log-probabilities.\n",
+    "    Returns:\n",
+    "        list[list[int]]: A list of lists, where each inner list is the decoded\n",
+    "                            sequence of token IDs for a batch item.\n",
+    "    \"\"\"\n",
+    "    batch_size = greedy_tokens.shape[1]\n",
+    "    decoded_sequences = []\n",
+    "    for i in range(batch_size):\n",
+    "        # Get the sequence for the current batch item\n",
+    "        if lengths is not None:\n",
+    "            # Use the actual length for this sequence\n",
+    "            sequence = greedy_tokens[:lengths[i], i]\n",
+    "        else:\n",
+    "            # Use the full length if no specific length is provided\n",
+    "            sequence = greedy_tokens[:, i]\n",
+    "\n",
+    "        decoded_sequence = []\n",
+    "        previous_token = -1 # Initialize with a value that won't match any valid token ID\n",
+    "\n",
+    "        for token_id in sequence:\n",
+    "            token_id = token_id.item() # Convert tensor scalar to Python int\n",
+    "\n",
+    "            # Step 2: Remove consecutive duplicates\n",
+    "            # Only add the token if it's different from the previous one\n",
+    "            if token_id != previous_token:\n",
+    "                # Step 3: Remove blank tokens\n",
+    "                # Only add the token if it's not the blank token\n",
+    "                if token_id != self.blank_id:\n",
+    "                    decoded_sequence.append(token_id)          \n",
+    "            previous_token = token_id\n",
+    "        decoded_sequences.append(decoded_sequence)\n",
+    "    return decoded_sequences\n",
     "\n",
     "    def _normalize(feats, wavs_l):\n",
     "        pass\n"
@@ -429,13 +467,15 @@
     "        'output_neurons':40\n",
     "}\n",
     "\n",
+    "phn_to_idx, idx_to_phn = load_phoneme_vocabulary(vocab_file)\n",
+    "\n",
     "modelo = Model_CNN_RNN_DNN_PHN(drop_out=par['dropout'],n_mels=par['n_mels'],\n",
     "        cnn_blocks=par['cnn_blocks'],cnn_channels=par['cnn_channels'],\n",
     "        cnn_kernel_size=par['cnn_kernelsize'],rnn_blocks=par['rnn_blocks'],\n",
     "        rnn_neurons=par['rnn_neurons'], dnn_blocks=par['dnn_blocks'],\n",
     "        dnn_neurons=par['dnn_neurons'],out_neurons=par['output_neurons'])\n",
     "   \n",
-    "loss_fn = nn.CTCLoss(blank=0)\n",
+    "loss_fn = nn.CTCLoss(blank=phn_to_idx['<blank>'])\n",
     "optimizer = torch.optim.Adadelta(rho=0.95,lr = par['lr'], eps=1.e-8)\n",
     "scheduler = ReduceLROnPlateau(optimizer, threshold=0.0025, mode='min', factor='0.8', patience=0)\n",
     "\n",
@@ -450,7 +490,7 @@
     "  \n",
     "\n",
     "asr = ASR(nn.Module)\n",
-    "PER = asr(train_dl, valid_dl, test_dl, modelo,loss_fn, optimizer, scheduler)\n",
+    "PER = asr(train_dl, valid_dl, test_dl, modelo,loss_fn, optimizer, scheduler,phn_to_idx,idx_to_phn)\n",
     "    "
    ]
   },
@@ -531,14 +571,13 @@
     "        with torch.no_grad():\n",
     "            for batch in tqdm(valid_dl,colour=\"red\",desc='validando') as t:\n",
     "                step += 1\n",
-    "                # loss = self.evaluate(batch)\n",
-    "                feats = self.hparams.compute_features(wavs)\n",
+    "                feats = MelSpectrogram(wavs)\n",
     "                feats = self.modules.normalize(feats, wavs_l)\n",
-    "                pout, pout_l = modelo(feats)\n",
-    "                loss = criterion(pout, phns, wavs_l, phns_l)\n",
+    "                pout, pout_l = modelo(feats) # Paso el batch por el modelo\n",
+    "                loss = criterion(pout, phns, wavs_l, phns_l) # Calculo la loss del batch \n",
     "                ctc_metrics.append(batch.id, pout, phns, pout_l, phns_l)\n",
-    "                sequence = sb.decoders.ctc_greedy_decode(\n",
-    "                    pout, pout_lens, blank_id=self.hparams.blank_index)\n",
+    "                avg_valid_loss = update_average(loss, avg_valid_loss, step)\n",
+    "                sequence = sb.decoders.ctc_greedy_decode(pout, pout_lens, blank_id=self.hparams.blank_index)\n",
     "                self.per_metrics.append(\n",
     "                    ids=batch.id,\n",
     "                    predict=sequence,\n",
@@ -546,12 +585,9 @@
     "                    target_len=phn_lens,\n",
     "                    ind2lab=self.label_encoder.decode_ndim,\n",
     "                )\n",
-    "                avg_valid_loss = update_average(loss, avg_valid_loss)\n",
     "        valid_loss.append(avg_valid_loss)        \n",
     "        per = self.per_metrics.summarize(\"error_rate\")\n",
-    "        old_lr, new_lr = sb.nnet.schedulers.NewBobScheduler.lr_annealing(per)\n",
-    "        sb.nnet.schedulers.update_learning_rate(self.optimizer, new_lr)\n",
-    "\n"
+    "        \n"
    ]
   },
   {
