--- a/timit/aux.ipynb
+++ b/timit/aux.ipynb
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "4ed27752",
    "metadata": {},
    "outputs": [
@@ -1719,23 +1719,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6ff145fd",
+   "execution_count": 6,
+   "id": "66cf5a40",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.26666666666666666"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Overall WER Statistics ---\n",
+      "Word Error Rate (WER): 0.3478\n",
+      "Substitutions (S): 5\n",
+      "Deletions (D): 2\n",
+      "Insertions (I): 1\n",
+      "Hits (Correct words - C): 16\n",
+      "Total Reference Words (N): 23\n",
+      "WER calculated from components: 0.3478\n",
+      "\n",
+      "--- Visualizing Alignment ---\n",
+      "=== SENTENCE 1 ===\n",
+      "\n",
+      "REF: the cat sat on the mat\n",
+      "HYP:   a cat sit on *** mat\n",
+      "       S       S      D    \n",
+      "\n",
+      "=== SENTENCE 2 ===\n",
+      "\n",
+      "REF: i have two apples and one orange\n",
+      "HYP: i have two  apple and  an orange\n",
+      "                     S       S       \n",
+      "\n",
+      "=== SENTENCE 3 ===\n",
+      "\n",
+      "REF: this is a very good speech recognition system\n",
+      "HYP: this ** a very good  speak recognition system\n",
+      "           D                  S                   \n",
+      "\n",
+      "=== SENTENCE 4 ===\n",
+      "\n",
+      "REF: hello world ***\n",
+      "HYP: hello world bye\n",
+      "                   I\n",
+      "\n",
+      "=== SUMMARY ===\n",
+      "number of sentences: 4\n",
+      "substitutions=5 deletions=2 insertions=1 hits=16\n",
+      "\n",
+      "mer=33.33%\n",
+      "wil=49.41%\n",
+      "wip=50.59%\n",
+      "wer=34.78%\n",
+      "\n",
+      "\n",
+      "--- Visualizing Specific Error Frequencies ---\n",
+      "=== SUBSTITUTIONS ===\n",
+      "the    --> a      = 1x\n",
+      "sat    --> sit    = 1x\n",
+      "apples --> apple  = 1x\n",
+      "one    --> an     = 1x\n",
+      "speech --> speak  = 1x\n",
+      "\n",
+      "=== INSERTIONS ===\n",
+      "bye = 1x\n",
+      "\n",
+      "=== DELETIONS ===\n",
+      "the = 1x\n",
+      "is  = 1x\n"
+     ]
     }
    ],
    "source": [
-    "jiwer.cer(references4, hypotheses4)"
+    "import jiwer\n",
+    "\n",
+    "# --- 1. Define Reference and Hypothesis Transcripts ---\n",
+    "references = [\n",
+    "    \"the cat sat on the mat\",\n",
+    "    \"i have two apples and one orange\",\n",
+    "    \"this is a very good speech recognition system\",\n",
+    "    \"hello world\"\n",
+    "]\n",
+    "\n",
+    "hypotheses = [\n",
+    "    \"a cat sit on mat\",\n",
+    "    \"i have two apple and an orange\",\n",
+    "    \"this a very good speak recognition system\",\n",
+    "    \"hello world bye\"\n",
+    "]\n",
+    "\n",
+    "# --- 2. Process Words to Get Detailed Metrics ---\n",
+    "metrics = jiwer.process_words(references, hypotheses)\n",
+    "\n",
+    "# --- WORKAROUND FOR 'truth_length' ---\n",
+    "# Calculate total reference words manually if 'truth_length' is not available\n",
+    "total_reference_words_manual = sum(len(ref.split()) for ref in references)\n",
+    "\n",
+    "# --- 3. Print Overall WER and Error Counts ---\n",
+    "print(\"--- Overall WER Statistics ---\")\n",
+    "print(f\"Word Error Rate (WER): {metrics.wer:.4f}\")\n",
+    "print(f\"Substitutions (S): {metrics.substitutions}\")\n",
+    "print(f\"Deletions (D): {metrics.deletions}\")\n",
+    "print(f\"Insertions (I): {metrics.insertions}\")\n",
+    "print(f\"Hits (Correct words - C): {metrics.hits}\")\n",
+    "\n",
+    "# Use the manually calculated total reference words\n",
+    "print(f\"Total Reference Words (N): {total_reference_words_manual}\")\n",
+    "\n",
+    "# Verify the WER formula: (S + D + I) / N\n",
+    "if total_reference_words_manual > 0:\n",
+    "    calculated_wer = (metrics.substitutions + metrics.deletions + metrics.insertions) / total_reference_words_manual\n",
+    "    print(f\"WER calculated from components: {calculated_wer:.4f}\")\n",
+    "else:\n",
+    "    print(\"Cannot calculate WER from components: Total reference words is zero.\")\n",
+    "\n",
+    "\n",
+    "# --- 4. Visualizing Alignment for Each Sentence ---\n",
+    "print(\"\\n--- Visualizing Alignment ---\")\n",
+    "print(jiwer.visualize_alignment(metrics))\n",
+    "\n",
+    "\n",
+    "# --- 5. Visualizing Specific Error Frequencies ---\n",
+    "print(\"\\n--- Visualizing Specific Error Frequencies ---\")\n",
+    "print(jiwer.visualize_error_counts(metrics, top_k=5))\n"
    ]
   }
  ],
